--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "fullstack-vue-graphql-starter",
   "version": "1.0.0",
   "description": "Starter for Full-Stack Vue-GraphQL-Apollo Projects",
-  "main": "server.js",
-  "scripts": {
-    "server": "nodemon server.js",
-    "client": "cd client && npm start",
-    "dev": "concurrently --names \"server,client\" \"npm run server --silent\" \"npm run client --silent\""
-  },
-  "keywords": [],
   "author": "Reed Barger",
-  "license": "ISC",
+  "scripts": {
+    "client": "cd client && npm run serve",
+    "dev": "concurrently --names \"server,client\" \"npm run server --silent\" \"npm run client --silent\"",
+    "server": "nodemon server.js"
+  },
+  "main": "server.js",
   "dependencies": {
     "apollo-server": "^2.0.0-rc.7",
     "bcrypt": "^3.0.0",
@@ -18,10 +16,18 @@
     "graphql": "^0.13.2",
     "jsonwebtoken": "^8.3.0",
     "md5": "^2.2.1",
-    "mongoose": "^5.2.6"
+    "mongoose": "^5.2.6",
+    "sass-loader": "^8.0.0",
+    "vuetify": "^2.1.5"
   },
   "devDependencies": {
     "concurrently": "^3.6.0",
-    "nodemon": "^1.18.1"
-  }
+    "nodemon": "^1.18.1",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "^1.1.0",
+    "vuetify-loader": "^1.3.0"
+  },
+  "keywords": [],
+  "license": "ISC"
 }
